--- a/index.html
+++ b/index.html
@@ -677,7 +677,7 @@
 
 <header class="header">
   <div class="container header-content">
-    <div class="logo">The Qur'an Alone</div>
+    <div class="logo">The Qur'an : The Pure Path</div>
 
     <nav class="desktop-nav">
       <a href="#quran-sufficient">Quran is Sufficient</a>
